Criação de tela de notas e visualizar notas de aluno a partir de udf

--- a/React/sistema-siga/src/Components/Notas/index.css
+++ b/React/sistema-siga/src/Components/Notas/index.css
@@ -1,11 +1,15 @@
-.containerNotas{
+.link{
+  text-decoration: none;
+  color:white;
+  
+}
+
+.link:hover{
+  text-decoration: none;
+  color:white;
+  
+}
+
+.container{
   margin: 4rem 8rem;
-}
-
-.inputNota{
-  width: 3rem;
-}
-
-#inputAvaliacao{
-  width: 10rem;
 }
